# 2048-rust

./: .gitignore  Cargo.toml  README.md
src/: direction.rs  game.rs  lib.rs  main.rs  moves.rs
src/tfe/: game.rs  helpers.rs  masks.rs  mod.rs  moves.rs
